@@ -42,9 +42,7 @@ if len(args) == 1:
 else:
     PARAMS = [float(a) for a in args]
 
-## Write out ipolhistos
-with open(opts.OUTPUT + "_prediction.yoda", "w") as f:
-    for num, k in enumerate(sorted(IHISTOS.keys())):
-        f.write(IHISTOS[k].toDataHisto(PARAMS).toYODA(k))
-        if num+1 < len(IHISTOS.keys()):
-            f.write("\n")
+## Write out ipolhistos TODO catch import error?
+import yoda
+scatters=[IHISTOS[k].toDataHisto(PARAMS).toScatter2D() for k in sorted(IHISTOS.keys())]
+yoda.writeYODA(scatters, "%s_prediction.yoda" % opts.OUTPUT)
